# hasbolt-extras

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.haskell-ci  hasbolt-extras.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
app/: Main.hs
example/: Main.hs
src/Database/Bolt/: Extras.hs  Id.hs
src/Database/Bolt/Extras/: Condition.hs  DSL.hs  Generic.hs  Graph.hs  Persisted.hs  Query.hs  Selector.hs  Template.hs  Utils.hs
src/Database/Bolt/Extras/DSL/: Typed.hs
src/Database/Bolt/Extras/DSL/Internal/: Executer.hs  Instances.hs  Language.hs  New.hs  NewNew.hs  Types.hs
src/Database/Bolt/Extras/DSL/Typed/: Families.hs  Instances.hs  Parameters.hs  Types.hs
src/Database/Bolt/Extras/Graph/Internal/: AbstractGraph.hs  Class.hs  Get.hs  GraphQuery.hs  Put.hs
src/Database/Bolt/Extras/Internal/: .#Queries.hs  Condition.hs  Cypher.hs  Instances.hs  Persisted.hs  Queries.hs  Template.hs  Types.hs
src/Database/Bolt/Extras/Query/: BoltGraph.hs  Cypher.hs  Delete.hs  Entity.hs  Get.hs  Put.hs  Queries.hs  Selectors.hs  Set.hs  Temp.hs  Utils.hs
src/Database/Bolt/Extras/Selector/: Class.hs  Defaults.hs  Instances.hs  Path.hs  Types.hs
src/Database/Bolt/Extras/Template/: Converters.hs  Instances.hs  Types.hs
src/Database/Bolt/Extras/Template/Internal/: Converters.hs
test/: Doctest.hs
