name:           hasbolt-extras
version:        0.1.0.0
synopsis:       Extras for hasbolt library
description:    Extras for hasbolt library
homepage:       https://github.com/biocad/hasbolt-extras#readme
bug-reports:    https://github.com/biocad/hasbolt-extras/issues
author:         Bogdan Neterebskii, Vladimir Morozov
maintainer:     bog2dan1@gmail.com
copyright:      (c) 2018, BIOCAD
stability:      experimental
category:       Database
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files: CHANGELOG.md
                    README.md

source-repository head
  type: git
  location: https://github.com/biocad/hasbolt-extras

library
  hs-source-dirs:   src
  exposed-modules:  Database.Bolt.Extras
                  , Database.Bolt.Extras.Utils
                  , Database.Bolt.Extras.Template
  other-modules:    Database.Bolt.Extras.Template.Converters
                  , Database.Bolt.Extras.Template.Types
                  , Database.Bolt.Extras.Template.Instances
                  , Database.Bolt.Extras.Query.Entity
                  , Database.Bolt.Extras.Query.Queries
  build-depends:    base >=4.7 && <5
                  , text
                  , hasbolt
                  , containers
                  , neat-interpolation
                  , template-haskell
                  , th-lift-instances
                  , lens
  default-language: Haskell2010